<resources>
    <string name="app_name">Orbiter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="searchbar_hint">Search here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_more">More</string>
    <string name="action_tabs">Tabs</string>
    <string name="new_tab">New tab</string>
    <string name="new_private_tab">New private tab</string>
    <string name="history">History</string>
    <string name="clear_history">Clear history</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="open_tab">Open tab</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_title">Settings</string>
    <string name="general_settings">General</string>
    <string name="default_launch_state">Default launch state</string>
    <string name="tabs_title">Tabs</string>
    <string name="general_settings_title">General settings\n</string>
    <string name="general_settings_name">General</string>
    <string name="general_settings_desc">Default launch state, Search engine</string>
    <string name="search_settings_name">Search</string>
    <string name="search_settings_desc">Menu, Search feed</string>
    <string name="appearance_settings_name">Appearance</string>
    <string name="appearance_settings_desc">Text size, Tabs layout, Bookmarks layout</string>
    <string name="history_settings_name">History</string>
    <string name="history_settings_desc">Pause/Clear history</string>
    <string name="about_settings_name">About</string>
    <string name="about_settings_desc">Orbiter Beta 1.0.0</string>
    <string name="resume_from_where_you_left">Resume from where you left</string>
    <string name="open_new_tab_on_launch">Open new tab on launch</string>
    <string name="web_view_settings_name">Web view</string>
    <string name="web_view_settings_desc">Java script enabled, support zoom</string>
    <string name="web_view_settings_title">Web view settings</string>
    <string name="java_script_enabled_title">Java script enabled</string>
    <string name="support_zoom_title">Support zoom</string>
    <string name="display_zoom_controls_title">Display zoom controls</string>
    <string name="allow_content_access_title">Allow content access</string>
    <string name="dom_storage_enabled_title">Dom storage enabled</string>
    <string name="revert_back_title">Revert back to original settings</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="history_settings_title">History settings</string>
    <string name="pause_history_title">Pause history</string>
    <string name="clear_history_title">Clear history</string>
    <string name="search_engine">Search engine</string>
    <string name="search_settings_title">Search settings</string>
    <string name="search_bar_title">Add tabs icon on the search bar menu</string>
    <string name="search_bar_info">Requires restart for the change to take effect</string>
    <string name="history_title">History</string>

</resources>