<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/new_tab"
        android:icon="@drawable/tab"
        android:title="@string/new_tab" />

    <item
        android:id="@+id/new_private_tab"
        android:icon="@drawable/lock"
        android:title="@string/new_private_tab" />

    <item
        android:id="@+id/history"
        android:icon="@drawable/history"
        android:title="@string/history" />

    <item
        android:id="@+id/clear_history"
        android:icon="@drawable/clear_all"
        android:title="@string/clear_history" />

    <item
        android:id="@+id/add_bookmark"
        android:icon="@drawable/bookmark_add"
        android:title="@string/add_bookmark" />

    <item
        android:id="@+id/bookmarks"
        android:icon="@drawable/bookmarks"
        android:title="@string/bookmarks" />

    <item
        android:id="@+id/tabs"
        android:icon="@drawable/tab"
        android:title="@string/open_tab" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/exit"
        android:icon="@drawable/close"
        android:title="@string/exit" />

</menu>